{
    "name": "PlayerInputs",
    "maps": [
        {
            "name": "PlayerMove",
            "id": "2f47e08e-6e89-4045-90ac-8143981d4c73",
            "actions": [
                {
                    "name": "MouseClick",
                    "type": "Button",
                    "id": "b0095796-d7c5-4757-80b9-2c972eb9b812",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "afc9843d-1bac-4f5b-b57e-7f169ddcbe9b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "89fda5ac-46ce-4dac-acca-0db697bdd398",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "affd22b6-a7c0-4b77-b7bb-1f6e729742a2",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}